# project_euler_python_tdd

./: .gitignore  README.md
problem1/: notebook1.ipynb  pyproject.toml
problem1/problem1/: objects.py
problem1/tests/: test__is_multiple_of_3.py  test__objects.py
