[tool.poetry]
name = "problem1"
version = "0.1.0"
description = ""
authors = ["ccosnett <conorcosnett@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
